compiler/actonc/test/syntaxerrors/err8.golden
Building file test/syntaxerrors/err8.act

ERROR: Error when compiling err8 module: Indentation error
   |
16 |     z = x+y
   |     ^
Too much indentation

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

